manifests/nginx_deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-alpine
  template:
    metadata:
      labels:
        app: nginx-alpine
    spec:
      containers:
        - name: nginx-alpine
          image: acrprod0327.azurecr.io/production/nginx-alpine
          ports:
          - containerPort: 80
