manifests/spring_deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: spring-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: acrprod0327.azurecr.io/production/spring-app
          ports:
          - containerPort: 80
