manifests/spring_service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-svc
spec:
  selector:
    app: spring-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
